# sharc

./: .dockerignore  .gitignore  .gitmodules  .profile  3x3_proportional_controller.c  Dockerfile  Dockerfile_ros  Dockerfile_scarabonly  Makefile  README.md  build  docker-build-mpc-examples-image.sh  docker_build_and_push.sh  main.py  run  run_tests.py  scarabizor.py  setup  setup.py  setup_sharc.sh  sharc_setup_and_run.sh
.devcontainer/: README.md  devcontainer.json
.devcontainer/acc_example/: devcontainer.json
acc_example/: .gitignore  CMakeLists.txt  Makefile  PARAMS.cortex_a76  acc_controller.cpp  closed_loop_simulation.py  config.json  config_base.json  plant_dynamics.py  run_examples.py  scarab_test_libmpc.py
acc_example/saved_data_out_files/: data_out_cache_size_sweep.json
controllers/: CustomController.cpp  CustomController.h  LMPCController.cpp  LMPCController.h  NLMPCController.cpp  NLMPCController.h  controller.h
controllers/include/: LMPCController.h
controllers/src/: LMPCController.cpp  NLMPCController.cpp
docker_user_home/: .bashrc  Makefile  PARAMS.in  controller.py  main_ode.c  pub.py  run_scarab  trace_cmd
docs/: Tutorial: Implementing Custom Dynamics and Controllers.md
dynamics/: dynamics.py  dynamics_base.py
examples/acc2_example/: .gitignore  CMakeLists.txt  base_config.json  controller_delegator.py  generate_example_figures.py  latest
examples/acc2_example/chip_configs/: PARAMS.cortex_m55
examples/acc2_example/simulation_configs/: default.json  example_configs.json  fake_delays.json  parallel.json  parallel_vs_serial.json  serial.json  simulation_modes_tests.json  test_consistency_serial_vs_parallel.json  test_serial_vs_parallel_with_fake_delays.json
examples/acc_example/: .gitignore  CMakeLists.txt  Makefile  README.md  acc_controller.cpp  base_config.json  closed_loop_simulation.py  controller_delegator.py  controller_runner.cpp  debug_levels.json  environment.txt  environment_new.txt  generate_example_figures.py  make_plots.ipynb  plant_dynamics.py  requirements.txt  scarab_test_libmpc.py  smoke_test.sh
examples/acc_example/chip_configs/: PARAMS.base  PARAMS.cortex_a76  PARAMS.cortex_m55
examples/acc_example/saved_data_out_files/: data_out_cache_size_sweep all.json  data_out_cache_size_sweep.json  data_out_clock_speed_sweep.json  data_out_prediction.json  data_out_warm_start.json
examples/acc_example/scripts/: controller_delegator.py  example_dynamics.py  plant_dynamics.py
examples/acc_example/simulation_configs/: example_configs.json  fake_delays.json  parallel.json  parallel_vs_serial.json  prediction_horizon.json  serial.json  simulation_modes_tests.json  smoke_test.json  test_consistency_SLOW.json  test_consistency_serial_vs_parallel.json  test_serial_consistency_with_fake_delays.json  test_serial_vs_parallel_with_fake_delays.json
examples/acc_example/src/: acc_controller.cpp
examples/cartpole/: CMakeLists.txt  README.md  base_config.json  controller_delegator.py
examples/cartpole/chip_configs/: PARAMS.cortex_a76  PARAMS.cortex_m55
examples/cartpole/simulation_configs/: parallel_075.json  parallel_0775.json  parallel_079.json  parallel_08.json  parallel_08_0.05mb.json  parallel_08_0.1mb.json  (+7 more)
integration_tests/: run_all.sh  test_consistency.py  test_simulation.py
libmpc_example/: .gitignore  Makefile  PARAMS.base  README.md  acc_controller.cpp  config.json  config_base.json  example_configs.json  plant_dynamics.py  run_examples.py  scarab_test_libmpc.py  system_dynamics.json  test_libmpc.cpp
libmpc_example/saved_data_out_files/: data_out_clock_speed_sweep.json  data_out_prediction.json
libmpc_example/sim_dir/: PARAMS.in
pwintz_example/: Makefile  original_dir_link  pipereader.py  read_input.cpp  scarab_test_qsort.py
repeatability_evaluation/: .gitignore  run_acc_example_parallel_vs_serial.sh  run_acc_example_to_generate_figure_5.sh  run_acc_example_with_fake_delays.sh  run_example_in_container.sh  run_interactive_sharc_container.sh  run_long_tests.sh  run_tests.sh
resources/dynamics/: dynamics.py
resources/include/: debug_levels.hpp  scarabintheloop_utils.hpp
resources/integration_tests/: run_all.sh  test_ACC_example_with_fake_delays.py  test_experiment_list.py
resources/scarabintheloop/: README.md  __init__.py  controller_delegator_base.py  controller_interface.py  data_types.py  debug_levels.py  dynamics_base.py  make_plots.py  plant_runner.py  run_scarabintheloop.py  scarabintheloop.h  scarabizor.py  testing.py  utils.py
resources/sharc/: README.md  __init__.py  __main__.py  controller_delegator_base.py  controller_interface.py  data_types.py  debug_levels.py  dynamics_base.py  make_plots.py  plant_runner.py  requirements.txt  scarabintheloop_TRASH?.h  scarabizor.py  setup.py  sharc  testing.py  utils.py
resources/tests/: .gitignore  context.py  test_SimulationClass.py  test_batches.py  test_computation_times_processor.py  test_plant_runner.py  test_scarabizor.py  test_timestepseries.py
scarabintheloop/: __init__.py  make_plots.py  plant_runner.py  requirements.txt  run_scarabintheloop.py  scarabintheloop  scarabizor.py  setup.py  utils.py
scarabintheloop/include/: scarabintheloop.h
scarabintheloop/scripts/: make_scarabintheloop_pipes.sh  parallelize_simulation_commands.sh  plot.sh  portabilize_trace.py  run_examples.py  run_in_parallel.sh  run_plant.py  run_portabilize_trace.sh  run_scarabintheloop.py  run_scarabintheloop_simulations.py  trace.sh
src/: Test.cpp
src/cpp_pubsub/: CMakeLists.txt  package.xml
tests/: context.py  controller_delegator.py  plant_dynamics.py  scarabintheloop_mocks.py  sharc_mocks.py  test_batches.py  test_controller_interface.py  test_json.py  test_scarabintheloop.py  test_scarabintheloop_SimulationClass.py  test_scarabintheloop_computation_times_processor.py  test_scarabintheloop_controller_interface.py  test_scarabintheloop_json.py  test_scarabintheloop_plant_runner.py  test_scarabintheloop_scarabizor.py  test_scarabintheloop_timestepseries.py  test_scarabintheloop_utils.py  test_scarabizor.py  test_timestepseries.py  test_utils.py  tests.py
(+24 files in other folders)
